--- a/Level-1 Project 2/index.html
+++ b/Level-1 Project 2/index.html
@@ -137,7 +137,7 @@
           </div>
         
           <div class="mySlides fade">
-            <img src="design.png">
+            <a href="https://islamic-banking-concept.netlify.app/" target="_blank"><img src="concept.png"></a>
             <div class="text">Landing Page Design</div>
           </div>
 
